update inspect params
